<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/margin_medium">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.leanote.android.widget.LeaTextView
                android:id="@+id/isPublicLabel"
                style="@style/LeanoteSubHeader"
                android:layout_width="0dp"
                android:layout_height="34dp"
                android:layout_weight="1"
                android:focusable="false"
                android:singleLine="true"
                android:text="@string/publish_note" />

            <Switch
                android:id="@+id/sw_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View style="@style/MeListSectionDividerView" />

        <LinearLayout
            android:id="@+id/ll_notebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.leanote.android.widget.LeaTextView
                android:id="@+id/notebookLabel"
                style="@style/LeanoteSubHeader"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="34dp"
                android:text="@string/note_book" />

            <TextView
                android:id="@+id/tv_notebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="abc"
                android:textColor="#999"/>

        </LinearLayout>

        <View style="@style/MeListSectionDividerView" />

        <com.leanote.android.widget.LeaTextView
            android:id="@+id/tagsLabel"
            style="@style/LeanoteSubHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tags" />

        <com.leanote.android.widget.SuggestionAutoCompleteText
            android:id="@+id/et_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/tags_separate_with_commas"
            android:inputType="textAutoCorrect"
            android:textSize="@dimen/text_sz_large" />

    </LinearLayout>
</ScrollView>
